<resources>
    <string name="app_name">XML_NAVIGATION_BURGER</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">Setting</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="history">History</string>
    <string name="notification">Notification</string>
    <string name="cart">Cart</string>
</resources>