<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/it1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_24"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_24"
            android:title="@string/setting" />
    </group>

    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_share_24"
        android:title="@string/share" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout_24"
        android:title="@string/logout" />

</menu>
